// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupWidget.render() renders correctly with default props 1`] = `
<div>
  <IconHeader
    subtitle="Test subtitle"
    title="Test title"
  >
    <BlendedImage
      imgPath="assets/football.svg"
    />
  </IconHeader>
  <TabPagination
    renderTab={[Function]}
    renderTabList={[Function]}
    selected={0}
  >
    
  </TabPagination>
</div>
`;

exports[`GroupWidget.render() renders correctly with groups 1`] = `
<div>
  <IconHeader
    subtitle="Test subtitle"
    title="Test title"
  >
    <BlendedImage
      imgPath="assets/football.svg"
    />
  </IconHeader>
  <TabPagination
    renderTab={[Function]}
    renderTabList={[Function]}
    selected={0}
  >
    <CountryList>
      <CountryListElement
        country="Test outcome label"
        flagUrl="/base/flags/path/1110.svg"
        onClick={[Function]}
        outcome={
          Object {
            "id": 1100,
            "label": "Test outcome label",
            "participantId": 1110,
          }
        }
      />
      <CountryListElement
        country="Test outcome label 2"
        flagUrl="/base/flags/path/1220.svg"
        onClick={[Function]}
        outcome={
          Object {
            "id": 1200,
            "label": "Test outcome label 2",
            "participantId": 1220,
          }
        }
      />
    </CountryList>
    <CountryList>
      <CountryListElement
        country="Test outcome label"
        flagUrl="/base/flags/path/2110.svg"
        onClick={[Function]}
        outcome={
          Object {
            "id": 2100,
            "label": "Test outcome label",
            "participantId": 2110,
          }
        }
      />
      <CountryListElement
        country="Test outcome label 2"
        flagUrl="/base/flags/path/2220.svg"
        onClick={[Function]}
        outcome={
          Object {
            "id": 2200,
            "label": "Test outcome label 2",
            "participantId": 2220,
          }
        }
      />
    </CountryList>
  </TabPagination>
</div>
`;

exports[`GroupWidget.render() renders correctly with initially selected group 1`] = `
<div>
  <IconHeader
    subtitle="Test subtitle"
    title="Test title"
  >
    <BlendedImage
      imgPath="assets/football.svg"
    />
  </IconHeader>
  <TabPagination
    renderTab={[Function]}
    renderTabList={[Function]}
    selected={1}
  >
    <CountryList>
      <CountryListElement
        country="Test outcome label"
        flagUrl="/base/flags/path/1110.svg"
        onClick={[Function]}
        outcome={
          Object {
            "id": 1100,
            "label": "Test outcome label",
            "participantId": 1110,
          }
        }
      />
      <CountryListElement
        country="Test outcome label 2"
        flagUrl="/base/flags/path/1220.svg"
        onClick={[Function]}
        outcome={
          Object {
            "id": 1200,
            "label": "Test outcome label 2",
            "participantId": 1220,
          }
        }
      />
    </CountryList>
    <CountryList>
      <CountryListElement
        country="Test outcome label"
        flagUrl="/base/flags/path/2110.svg"
        onClick={[Function]}
        outcome={
          Object {
            "id": 2100,
            "label": "Test outcome label",
            "participantId": 2110,
          }
        }
      />
      <CountryListElement
        country="Test outcome label 2"
        flagUrl="/base/flags/path/2220.svg"
        onClick={[Function]}
        outcome={
          Object {
            "id": 2200,
            "label": "Test outcome label 2",
            "participantId": 2220,
          }
        }
      />
    </CountryList>
  </TabPagination>
</div>
`;
